--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
     <div id="features-section">
       <div class="feature">
         <div class="center">
-          <div class="image-container">
-            <img src="./resources/images/feature-1.png" />
-          </div>
+          <img src="./resources/images/feature-1.png">
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
             <h3>Shutter speed, apperture and flash output adjust automatically</h3>
@@ -68,9 +66,7 @@
       </div>
       <div class="feature">
         <div class="center">
-          <div class="image-container">
-            <img src="./resources/images/feature-2.png" />
-          </div>
+          <img src="./resources/images/feature-2.png">
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
             <h3>From the paint outside to the tiny screw inside, Fotomatic is crafted with love and 20-year of expertise</h3>
@@ -86,18 +82,10 @@
         <h3>Feed your creativity with 20 different filter designed by our eclectic in-house photographers!</h3>
       </div>
       <div class="images-container">
-        <div class="image-container">
-          <img src="./resources/images/filter-1.png" />
-        </div>
-        <div class="image-container">
-          <img src="./resources/images/filter-2.png" />
-        </div>
-        <div class="image-container">
-          <img src="./resources/images/filter-3.png" />
-        </div>
-        <div class="image-container extra">
-          <img src="./resources/images/filter-4.png" />
-        </div>
+        <img src="./resources/images/filter-1.png" />
+        <img src="./resources/images/filter-2.png" />
+        <img src="./resources/images/filter-3.png" />
+        <img src="./resources/images/filter-4.png" />
       </div>
     </div>
 
